@startuml

namespace Yacare.CatastroBundle.Entity  {
	class Calle <<class>> {
		+Nombre
		+NombreOriginal
		+NombreAlternativo
		+Tipo
	}

	class Barrio <<class>> {
		+Nombre
		+NombreAlternativo
		+Ordenanza
		+Notas
		+Obs
	}
	
	class Partida <<class>> {
		+Seccion
		+MacizoAlfa
		+MacizoNum
		+Macizo
		+ParcelaAlfa
		+ParcelaNum
		+Parcela
		+SubparcelaAlfa
		+SubparcelaNum
		+Subparcela
		+UnidadFuncional
		+Titular
		+Zona
		+Numero
		+Legajo
	}
	
	class PartidaPersona {
		+Partida
		+Persona
		+Relacion
		+TipoRelacion
	}
	
	class UsoSuelo <<class>> {
		+Nombre
		+Categoria
		+Seccion
		+Codigo
		+SuperficieMaxima
		+UsoZona1..20
		--
		getUsoZona(zona)
	}
	
	class Zona <<class>> {
		+Nombre
		+Obs
		+Codigo
		+Fos
		+Fot
	}
	class ConPartida <<(T,#FF7700) trait>> {
		+Partida
		
	}

	Partida ..|> Yacare.BaseBundle.Entity.ConPartida : titular
	Partida ..|> Yacare.BaseBundle.Entity.ConDomicilio : implementa
	Partida ..|> ConPartida : implementa
	Partida "1" o-- "0..1" Yacare.BaseBundle.Entity.Persona : titular
	Partida "1" o-- "0..1" Calle : puede tener
	Partida "1" o-- "0..1" Zona : puede tener
	
	PartidaPersona "0..n" o-- "0..n" Yacare.BaseBundle.Entity.Persona : Persona
	PartidaPersona "0..n" o-- "0..n" Partida : Partida	
}


@enduml
